<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:appSrcCompat="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingStart="@dimen/layout_margin"
    android:paddingEnd="@dimen/padding_main_linear_layout">

    <TextView
        android:id="@+id/name_text_view"
        style="@style/name_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/star_image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin"
        android:contentDescription="@string/star_image_cont_desc"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ScrollView
        android:id="@+id/bio_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            appSrcCompat:orientation="vertical"
            android:orientation="vertical"
            appSrcCompat:ignore="ExtraText,UseCompoundDrawables">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#4CAF50"
                android:contentDescription="@string/image_android_content_desctiption"
                app:srcCompat="@drawable/ic_launcher_foreground" />

            <TextView
                android:id="@+id/bio_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/bio_content_description"
                android:fontFamily="@font/roboto_light"
                android:lineSpacingMultiplier="@dimen/line_spacing_multiplier"
                android:text="@string/bio"
                android:textAppearance="@style/bio_style" />



        </LinearLayout>

    </ScrollView>
</LinearLayout>